Add install button and update icon path in index.html; style button in Weather.css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#ffffff" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public//icons/logo for weather detection.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Detection</title>
   </head>
-  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSMX0PT1CR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
